Fixed a few deprecated calls in tests.