@@ -41,7 +41,7 @@ public class LatitudeTest {
             
             Assert.assertEquals("Wrong degrees", degrees, l.getDegrees());
             Assert.assertEquals("Wrong minutes", minutes, l.getMinutes());
-            Assert.assertEquals("Invalid decimal latitude", new Float(37.78585F), l.getDecimalLatitude(Direction.NORTH));
+            Assert.assertEquals("Invalid decimal latitude", Float.valueOf(37.78585F), l.getDecimalLatitude(Direction.NORTH));
         } catch (Exception e) {
             e.printStackTrace();
             Assert.fail("Unexpected exception: " + e.getMessage());
@@ -59,7 +59,7 @@ public class LatitudeTest {
             
             Assert.assertEquals("Wrong degrees", degrees, l.getDegrees());
             Assert.assertEquals("Wrong minutes", minutes, l.getMinutes());
-            Assert.assertEquals("Invalid decimal latitude", new Float(-37.78585F), l.getDecimalLatitude(Direction.SOUTH));
+            Assert.assertEquals("Invalid decimal latitude", Float.valueOf(-37.78585F), l.getDecimalLatitude(Direction.SOUTH));
         } catch (Exception e) {
             e.printStackTrace();
             Assert.fail("Unexpected exception: " + e.getMessage());
@@ -77,7 +77,7 @@ public class LatitudeTest {
             
             Assert.assertEquals("Wrong degrees", degrees, l.getDegrees());
             Assert.assertEquals("Wrong minutes", minutes, l.getMinutes());
-            Assert.assertEquals("Invalid decimal latitude", new Float(-122.38755F), l.getDecimalLatitude(Direction.SOUTH));
+            Assert.assertEquals("Invalid decimal latitude", Float.valueOf(-122.38755F), l.getDecimalLatitude(Direction.SOUTH));
         } catch (Exception e) {
             e.printStackTrace();
             Assert.fail("Unexpected exception: " + e.getMessage());
@@ -95,7 +95,7 @@ public class LatitudeTest {
             
             Assert.assertEquals("Wrong degrees", degrees, l.getDegrees());
             Assert.assertEquals("Wrong minutes", minutes, l.getMinutes());
-            Assert.assertEquals("Invalid decimal latitude", new Float(167.15055F), l.getDecimalLatitude(Direction.NORTH));
+            Assert.assertEquals("Invalid decimal latitude", Float.valueOf(167.15055F), l.getDecimalLatitude(Direction.NORTH));
         } catch (Exception e) {
             e.printStackTrace();
             Assert.fail("Unexpected exception: " + e.getMessage());
@@ -113,7 +113,7 @@ public class LatitudeTest {
             
             Assert.assertEquals("Wrong degrees", degrees, l.getDegrees());
             Assert.assertEquals("Wrong minutes", minutes, l.getMinutes());
-            Assert.assertEquals("Invalid decimal latitude", new Float(45.556F), l.getDecimalLatitude(Direction.NORTH));
+            Assert.assertEquals("Invalid decimal latitude", Float.valueOf(45.556F), l.getDecimalLatitude(Direction.NORTH));
         } catch (Exception e) {
             e.printStackTrace();
             Assert.fail("Unexpected exception: " + e.getMessage());
